# metalfs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
agent/: Cargo.toml
client/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
controller/: Cargo.toml
controller/src/: config.rs  lib.rs  server.rs
protos/: metalfs.proto
server/: Cargo.toml  build.rs
server/src/: lib.rs
server/src/core/: errors.rs  logger.rs  mod.rs  version.rs
server/src/filer/: config.rs  heartbeat.rs  server.rs
server/src/master/: config.rs  manager.rs  metadata.rs  mod.rs  monitoring.rs  reporting.rs  server.rs
server/src/master/managers/: locking.rs  metadata.rs  mod.rs  storage.rs
server/src/master/services/: metadata.rs  mod.rs  monitoring.rs  reporting.rs
server/src/storage/: config.rs  server.rs
