[workspace]
members = [
    "client", 
    "server", 
]

[workspace.dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
async-trait = "0.1.56"
async_once = "0.2.6"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.23", features = ["env", "derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
error-chain = "0.12.4"
fern = { version = "0.6.1", features = ["colored"] }
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4"
prost = "0.11"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"
tonic = "0.9"
tokio = { version = "1.21.1", features = ["full"] }
tonic-build = "0.9"