[package]
name = "mfs"
version = "0.1.0"
edition = "2021"
default-run = "mfs-master"

[[bin]]
name = "mfs-master"
path = "src/bin/master.rs"

[[bin]]
name = "mfs-storage"
path = "src/bin/storage.rs"

[dependencies]
# shared dependencies
actix-web = { workspace = true }
actix-web-httpauth = { workspace = true }
async-trait = { workspace = true }
async_once = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
error-chain = { workspace = true }
fern = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }